--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -40,11 +40,44 @@
     </div>
 
     <div class="container">
-      <h1>*Under Construction*</h1>
-    </div> <!-- /container -->
+      <div class="row">
+        <div class="span12"><h1>*Under Construction*</h1></div>
+        <div class="span12">
+          <div id="myCarousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="http://ww1.sinaimg.cn/large/454d8846jw1e3rxns72sij.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="http://ww1.sinaimg.cn/large/454d8846jw1e3rxgtmgx5j.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="http://ww4.sinaimg.cn/large/454d8846jw1e3rxgoclm9j.jpg" alt="">
+            </div>
+          </div>
+          <!-- Carousel nav -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
+    <script>
+      !function ($) {
+        $(function(){
+          $('#myCarousel').carousel()
+        })
+      }(window.jQuery)
+    </script>
   </body>
 </html>
